--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   	  <th><strong>Book Author</strong></th>
   	</tr>
   	<tr>
-  	  <th><em>Alice's Adventures in Wonderland</em></th>
-  	  <th>Lewis Carroll</th>
+  	  <td><em>Alice's Adventures in Wonderland</em></td>
+  	  <td>Lewis Carroll</td>
   	</tr>
   	<tr>
-  	  <th><em>Peter Pan</em></th>
-  	  <th>J. M. Barrie</th>
+  	  <td><em>Peter Pan</em></td>
+  	  <td>J. M. Barrie</td>
   	</tr>
   	<tr>
-  	  <th><em>The wonderful Wizard of Oz</em></th>
-  	  <th>L. Frank Baum</th>
+  	  <td><em>The wonderful Wizard of Oz</em></td>
+  	  <td>L. Frank Baum</td>
   	</tr>
   </table>
   <h2><em>Alice's Adventures in Wonderland</em>, by Lewis Carroll</h2>
