--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <ul>
     <li><strong>Maria Guadalupe Soto</strong></li>
     <li><strong>ITMD-361</strong></li>
-    <li><strong>Lab 3
+    <li><strong>Lab 3</strong></li>
+  </ul>
 </body>
 </html>
